save to db finished

--- a/src/app/meal-form/meal-form.component.html
+++ b/src/app/meal-form/meal-form.component.html
@@ -11,7 +11,7 @@
                   matInput
                   (dateChange)="updateMealDataValue()"
                   [matDatepicker]="picker1"
-                  formControlName="todayDate"
+                  formControlName="mealDate"
                 />
                 <mat-datepicker-toggle
                   matIconSuffix
