removed the date view

--- a/src/app/all-meal-records/all-meal-records.component.html
+++ b/src/app/all-meal-records/all-meal-records.component.html
@@ -21,9 +21,7 @@
           aria-expanded="false"
           aria-controls="collapseOne"
         >
-          {{ weekMealDetail.key.split("$").at(0) }}
-          &nbsp; &nbsp;
-          {{ weekMealDetail.key.split("$").at(1) }}
+          {{ weekMealDetail.key }}
         </a>
       </h2>
       <div
