--- a/src/app/meal-form/meal-form.component.html
+++ b/src/app/meal-form/meal-form.component.html
@@ -94,6 +94,7 @@
                       matInput
                       formControlName="mealsConsumedUser"
                       placeholder="Name"
+                      appTrimWhitespace
                     />
                   </mat-form-field>
                   <mat-radio-group
