meal amount per meal time added in list view

--- a/src/app/all-meal-records/all-meal-records.component.html
+++ b/src/app/all-meal-records/all-meal-records.component.html
@@ -66,6 +66,7 @@
                       <tr class="table-info">
                         <th>#</th>
                         <th>Name</th>
+                        <th>Amount</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -77,6 +78,7 @@
                       >
                         <th scope="row">{{ ind + 1 }}</th>
                         <td>{{ eachDetail.mealsConsumedUser }}</td>
+                        <td>{{ eachDetail.amountPerMeal }}</td>
                       </tr>
                       <tr>
                         <td colspan="3">
