--- a/TodoList/src/app/app.component.html
+++ b/TodoList/src/app/app.component.html
@@ -6,8 +6,8 @@
     <ul class="task-list">
       <li *ngFor="let task of tasks; let ind = index" class="task-item">
         <span>{{ ind + 1 }}.</span>
-        <span class="task-text">{{ task }}</span>
-        <button class="button" (click)="deleteTask(task)">Delete</button>
+        <span class="task-text">{{ task.task }}</span>
+        <button class="button" (click)="deleteTask(task.id)">Delete</button>
       </li>
     </ul>
   </div>
