moved to new component

--- a/ReusableReactiveForm/src/app/address/address.component.html
+++ b/ReusableReactiveForm/src/app/address/address.component.html
@@ -1,1 +1,9 @@
-<p>address works!</p>
+<ng-container formGroupName="address">
+  <input formControlName="state" type="text" name="state" placeholder="state" />
+  <input
+    formControlName="country"
+    type="text"
+    name="country"
+    placeholder="country"
+  />
+</ng-container>
