dynamic form with no boilerplate code

--- a/ReusableReactiveForm/src/app/app.component.html
+++ b/ReusableReactiveForm/src/app/app.component.html
@@ -6,6 +6,15 @@
     name="username"
     placeholder="username"
   />
-  <app-address></app-address>
+  <br />
+  <ng-container
+    formArrayName="address"
+    *ngFor="let item of getFormAddressArray; let indexValue = index"
+  >
+    <app-address [indexValue]="indexValue"></app-address> <br />
+  </ng-container>
+  <button type="button" (click)="addNewAddress()">Add</button>
+  <br />
+
   <button type="submit">submit</button>
 </form>
