--- a/ReusableReactiveForm/src/app/address/address.component.html
+++ b/ReusableReactiveForm/src/app/address/address.component.html
@@ -1,4 +1,4 @@
-<ng-container formGroupName="address">
+<ng-container [formGroupName]="indexValue">
   <input formControlName="state" type="text" name="state" placeholder="state" />
   <input
     formControlName="country"
