--- a/Signals_event_demo/src/app/app.component.html
+++ b/Signals_event_demo/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container-sm mt-5">
+  <h3 class="text-center">{{ title }}</h3>
   <div class="d-flex justify-content-end">
     <div class="input-group mb-3 width_input">
       <input
@@ -7,12 +8,9 @@
         placeholder="username"
         aria-label="username"
         aria-describedby="button-addon2"
+        (input)="searchUserDetail($event.target)"
       />
-      <button
-        class="btn btn-outline-secondary"
-        type="button"
-        id="button-addon2"
-      >
+      <button class="btn btn-outline-success" type="button" id="button-addon2">
         Search
       </button>
     </div>
@@ -21,28 +19,26 @@
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Name</th>
+        <th scope="col">Username</th>
+        <th scope="col">Email</th>
+        <th scope="col">Phone</th>
+        <th scope="col">Company Name</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
+      <tr
+        *ngFor="
+          let eachUserDetail of userDetailFilter();
+          let indexValue = index
+        "
+      >
+        <th scope="row">{{ indexValue + 1 }}</th>
+        <td>{{ eachUserDetail.name }}</td>
+        <td>{{ eachUserDetail.username }}</td>
+        <td>{{ eachUserDetail.email }}</td>
+        <td>{{ eachUserDetail.phone }}</td>
+        <td>{{ eachUserDetail.company.name }}</td>
       </tr>
     </tbody>
   </table>
