--- a/A17/src/app/app.component.html
+++ b/A17/src/app/app.component.html
@@ -1,58 +1,71 @@
-<div class="accordion" id="accordionPanelsStayOpenExample">
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button
-        class="accordion-button"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#if"
-        aria-expanded="true"
-        aria-controls="panelsStayOpen-collapseOne"
-      >
-        if statement
-      </button>
-    </h2>
-    <div id="if" class="accordion-collapse collapse show">
-      <div class="accordion-body">
-        <app-if></app-if>
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button
-        class="accordion-button collapsed"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#panelsStayOpen-collapseTwo"
-        aria-expanded="false"
-        aria-controls="panelsStayOpen-collapseTwo"
-      >
-        For
-      </button>
-    </h2>
-    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
-      <div class="accordion-body">
-        <app-for></app-for>
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button
-        class="accordion-button collapsed"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#panelsStayOpen-collapseThree"
-        aria-expanded="false"
-        aria-controls="panelsStayOpen-collapseThree"
-      >
-        switch
-      </button>
-    </h2>
-    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
-      <div class="accordion-body">
-        <app-switch></app-switch>
+<div class="container text-center mt-5">
+  <h4>{{ title }}</h4>
+  <div class="row">
+    <div class="col align-self-center mt-5">
+      <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#if"
+              aria-expanded="false"
+              aria-controls="panelsStayOpen-collapseOne"
+            >
+              if statement
+            </button>
+          </h2>
+          <div id="if" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              <app-if></app-if>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#panelsStayOpen-collapseTwo"
+              aria-expanded="false"
+              aria-controls="panelsStayOpen-collapseTwo"
+            >
+              For
+            </button>
+          </h2>
+          <div
+            id="panelsStayOpen-collapseTwo"
+            class="accordion-collapse collapse"
+          >
+            <div class="accordion-body">
+              <app-for></app-for>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#panelsStayOpen-collapseThree"
+              aria-expanded="false"
+              aria-controls="panelsStayOpen-collapseThree"
+            >
+              switch
+            </button>
+          </h2>
+          <div
+            id="panelsStayOpen-collapseThree"
+            class="accordion-collapse collapse"
+          >
+            <div class="accordion-body">
+              <app-switch></app-switch>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
