--- a/A17/src/app/switch/switch.component.html
+++ b/A17/src/app/switch/switch.component.html
@@ -1,5 +1,9 @@
-<div [ngSwitch]="fruit$ | async">
-  <ng-template ngSwitchCase="apple"> I like apples! </ng-template>
-  <ng-template ngSwitchCase="orange"> I like oranges! </ng-template>
-  <ng-template ngSwitchDefault> I don't like fruit. </ng-template>
-</div>
+@switch(fruit$ | async){ @case('apple'){
+<h5>I like apples!</h5>
+} @case('orange'){
+<h5>I like oranges!</h5>
+} @case('banana'){
+<h5>I like bananas!</h5>
+} @default {
+<h5>I don't like fruit.</h5>
+} }
