--- a/ngxtension/src/app/app.component.html
+++ b/ngxtension/src/app/app.component.html
@@ -13,11 +13,13 @@
               aria-expanded="false"
               aria-controls="panelsStayOpen-collapseOne"
             >
-              if statement
+              TrackById / TrackByProp
             </button>
           </h2>
           <div id="if" class="accordion-collapse collapse">
-            <div class="accordion-body"></div>
+            <div class="accordion-body">
+              <app-track></app-track>
+            </div>
           </div>
         </div>
         <div class="accordion-item">
