--- a/ngxtension/src/app/app.component.html
+++ b/ngxtension/src/app/app.component.html
@@ -61,14 +61,16 @@
               aria-expanded="false"
               aria-controls="panelsStayOpen-collapseThree"
             >
-              switch
+              InjectLazy
             </button>
           </h2>
           <div
             id="panelsStayOpen-collapseThree"
             class="accordion-collapse collapse"
           >
-            <div class="accordion-body"></div>
+            <div class="accordion-body">
+              <app-inject-lazy></app-inject-lazy>
+            </div>
           </div>
         </div>
       </div>
