--- a/src/app/meal-form/meal-form.component.html
+++ b/src/app/meal-form/meal-form.component.html
@@ -1,137 +1,112 @@
 <app-header></app-header>
-<div *ngIf="!pageLoading" class="container-fluid text-center mt-5">
-  <div class="row">
-    <div class="col-md-12 col-lg-12">
-      <div class="form-section bg-secondary bg-gradient">
-        <form [formGroup]="mealForm" (ngSubmit)="submitTheForm()">
-          <div class="row mt-2">
-            <div class="col-lg-4 col-md-6 col-xs-6">
-              <mat-form-field appearance="fill">
-                <input
-                  matInput
-                  (dateChange)="updateMealDataValue()"
-                  [matDatepicker]="picker1"
-                  formControlName="mealDate"
-                />
-                <mat-datepicker-toggle
-                  matIconSuffix
-                  [for]="picker1"
-                ></mat-datepicker-toggle>
-                <mat-datepicker #picker1></mat-datepicker>
-              </mat-form-field>
-            </div>
-            <div class="col-lg-4 col-md-6 col-xs-6">
-              <mat-form-field>
-                <mat-label>Day</mat-label>
-                <input
-                  matInput
-                  placeholder="Sunday"
-                  formControlName="day"
-                  type="text"
-                />
-              </mat-form-field>
-            </div>
-            <div class="col-lg-4 col-md-6 col-xs-6">
-              <mat-form-field appearance="fill">
-                <mat-label>Meal Time</mat-label>
-                <mat-select
-                  formControlName="mealTime"
-                  (valueChange)="mealTimeChanged($event)"
-                >
-                  <mat-option
-                    *ngFor="let eachMeal of mealTime"
-                    [value]="eachMeal"
-                  >
-                    {{ eachMeal }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-            <div class="col-lg-4 col-md-6 col-xs-6">
-              <mat-form-field>
-                <mat-label>Total meal Consumed Count</mat-label>
-                <input
-                  matInput
-                  placeholder="10"
-                  formControlName="mealsConsumedTotalCount"
-                  type="number"
-                />
-              </mat-form-field>
-            </div>
-            <div class="col-lg-4 col-md-6 col-xs-6">
-              <mat-form-field>
-                <mat-label>Amount per meal</mat-label>
-                <input
-                  matInput
-                  placeholder="50"
-                  formControlName="amountPerMeal"
-                  type="number"
-                />
-              </mat-form-field>
-            </div>
-            <div class="col-lg-4 col-md-6 col-xs-6">
-              <button
-                class="btn btn-primary mg-all"
-                type="button"
-                (click)="addNewUser()"
-              >
-                Add Additional user
-              </button>
-            </div>
-          </div>
-          <div class="row mb-2">
-            <div class="col-md-12">
-              <div
-                *ngFor="
-                  let eachUser of getMealsConsumptionArrayControls;
-                  let indexValue = index
-                "
-                formArrayName="mealsConsumptionArray"
-              >
-                <div [formGroupName]="indexValue">
-                  <mat-form-field>
-                    <input
-                      matInput
-                      formControlName="mealsConsumedUser"
-                      placeholder="Name"
-                      appTrimWhitespace
-                    />
-                  </mat-form-field>
-                  <mat-radio-group
-                    class="mg-all"
-                    aria-label="Select an option"
-                    formControlName="mealsConsumed"
-                    (change)="mealsConsumedValueChanged()"
-                  >
-                    <mat-radio-button
-                      *ngFor="let eachMealOption of mealsConsumedOptions"
-                      [value]="eachMealOption"
-                      >{{ eachMealOption }}</mat-radio-button
-                    >
-                  </mat-radio-group>
-                  <button
-                    *ngIf="checkMealsConsumedUserDisabled(indexValue)"
-                    type="button"
-                    (click)="removeMealsConsumedUser(indexValue)"
-                    class="m-2 btn btn-danger"
-                  >
-                    X
-                  </button>
-                </div>
-              </div>
-              <button
-                class="btn btn-primary mg-all"
-                [disabled]="!mealForm.valid"
-                type="submit"
-              >
-                Submit
-              </button>
-            </div>
-          </div>
-        </form>
+<form
+  *ngIf="!pageLoading"
+  [formGroup]="mealForm"
+  class="bg-gray-800 flex items-center justify-center"
+>
+  <div class="container mx-auto">
+    <div class="flex flex-wrap justify-center gap-4">
+      <mat-form-field class="w-full sm:w-1/2 lg:w-1/4 p-2" appearance="fill">
+        <input
+          matInput
+          (dateChange)="updateMealDataValue()"
+          [matDatepicker]="picker1"
+          formControlName="mealDate"
+        />
+        <mat-datepicker-toggle
+          matIconSuffix
+          [for]="picker1"
+        ></mat-datepicker-toggle>
+        <mat-datepicker #picker1></mat-datepicker>
+      </mat-form-field>
+
+      <mat-form-field class="w-full sm:w-1/2 lg:w-1/4 p-2">
+        <mat-label>Day</mat-label>
+        <input
+          matInput
+          placeholder="Sunday"
+          formControlName="day"
+          type="text"
+        />
+      </mat-form-field>
+      <mat-form-field class="w-full sm:w-1/2 lg:w-1/4 p-2" appearance="fill">
+        <mat-label>Meal Time</mat-label>
+        <mat-select
+          formControlName="mealTime"
+          (valueChange)="mealTimeChanged($event)"
+        >
+          <mat-option *ngFor="let eachMeal of mealTime" [value]="eachMeal">
+            {{ eachMeal }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field class="w-full sm:w-1/2 lg:w-1/4 p-2">
+        <mat-label>Total meal Consumed Count</mat-label>
+        <input
+          matInput
+          placeholder="10"
+          formControlName="mealsConsumedTotalCount"
+          type="number"
+        />
+      </mat-form-field>
+      <mat-form-field class="w-full sm:w-1/2 lg:w-1/4 p-2">
+        <mat-label>Amount per meal</mat-label>
+        <input
+          matInput
+          placeholder="50"
+          formControlName="amountPerMeal"
+          type="number"
+        />
+      </mat-form-field>
+      <div class="w-full sm:w-1/2 lg:w-1/4 p-2">
+        <button
+          type="button"
+          (click)="addNewUser()"
+          class="bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75"
+        >
+          Add Additional user
+        </button>
+      </div>
+      <div
+        class="mt-6 space-y-4"
+        *ngFor="
+          let eachUser of getMealsConsumptionArrayControls;
+          let indexValue = index
+        "
+        formArrayName="mealsConsumptionArray"
+      >
+        <div class="flex items-center" [formGroupName]="indexValue">
+          <mat-form-field class="w-full sm:w-1/2 lg:w-1/3 p-2">
+            <input
+              matInput
+              formControlName="mealsConsumedUser"
+              placeholder="Name"
+              appTrimWhitespace
+            />
+          </mat-form-field>
+          <mat-radio-group
+            class="flex gap-1"
+            aria-label="Select an option"
+            formControlName="mealsConsumed"
+            (change)="mealsConsumedValueChanged()"
+          >
+            <mat-radio-button
+              *ngFor="let eachMealOption of mealsConsumedOptions"
+              [value]="eachMealOption"
+              >{{ eachMealOption }}</mat-radio-button
+            >
+          </mat-radio-group>
+          <button
+            *ngIf="checkMealsConsumedUserDisabled(indexValue)"
+            type="button"
+            (click)="removeMealsConsumedUser(indexValue)"
+            class="text-white ml-3 flex bg-blue-500"
+          >
+            X
+          </button>
+        </div>
       </div>
     </div>
   </div>
-</div>
-
+</form>
 <mat-spinner class="spinner" *ngIf="pageLoading"></mat-spinner>
