--- a/src/app/all-meal-records/all-meal-records.component.html
+++ b/src/app/all-meal-records/all-meal-records.component.html
@@ -1,72 +1,61 @@
 <app-header></app-header>
-<div class="container-fluid text-center mt-5">
+<div class="container mx-auto text-center mt-5">
   <div
-    class="accordion"
-    id="accordionExample"
     *ngIf="this.totalMealDetails$ | async as totalMealDetails; else pageLoading"
   >
-    <div
-      class="accordion-item"
-      *ngFor="
-        let weekMealDetail of totalMealDetails | keyvalue;
-        let weekMealIndex = index
-      "
-    >
-      <h2 class="accordion-header">
-        <a
-          class="accordion-button"
-          type="button"
-          data-bs-toggle="collapse"
-          [href]="'#' + weekMealIndex + weekMealDetail.key"
-          aria-expanded="false"
-          aria-controls="collapseOne"
+    <div>
+      <div
+        *ngFor="
+          let weekMealDetail of totalMealDetails | keyvalue;
+          let weekMealIndex = index
+        "
+      >
+        <h2
+          class="bg-gray-800 text-white cursor-pointer"
+          (click)="toggleAccordion(weekMealIndex)"
         >
           {{ weekMealDetail.key }}
-        </a>
-      </h2>
-      <div
-        [id]="weekMealIndex + weekMealDetail.key"
-        class="accordion-collapse collapse show"
-        data-bs-parent="#accordionExample"
-      >
-        <div class="accordion-body">
-          <div class="accordion" id="#accordionExampleMeal">
+        </h2>
+        <div
+          [ngClass]="{
+            'accordion-collapse-visible': isAccordionOpen(weekMealIndex),
+            'accordion-collapse-hidden': !isAccordionOpen(weekMealIndex)
+          }"
+          class="accordion-collapse transition-max-height duration-500 ease-in-out overflow-hidden"
+        >
+          <div>
             <div
-              class="accordion-item"
               *ngFor="
                 let mealTimeDetail of weekMealDetail.value | keyvalue;
                 let mealTimeIndex = index
               "
             >
-              <h2 class="accordion-header">
-                <a
-                  class="accordion-button collapsed"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  [href]="
-                    '#' + mealTimeDetail.key + mealTimeIndex + weekMealIndex
-                  "
-                  aria-expanded="false"
-                  aria-controls="collapseTwo"
-                >
-                  {{ mealTimeDetail.key }} -->
-                  {{ mealTimeDetail.value.length }}
-                </a>
+              <h2
+                class="bg-gray-700 text-white cursor-pointer"
+                (click)="toggleAccordion(weekMealIndex, mealTimeIndex)"
+              >
+                {{ mealTimeDetail.key }} - {{ mealTimeDetail.value.length }}
               </h2>
               <div
-                [id]="mealTimeDetail.key + mealTimeIndex + weekMealIndex"
-                class="accordion-collapse collapse"
-                data-bs-parent="#accordionExampleMeal"
+                [ngClass]="{
+                  'accordion-collapse-visible': isAccordionOpen(
+                    weekMealIndex,
+                    mealTimeIndex
+                  ),
+                  'accordion-collapse-hidden': !isAccordionOpen(
+                    weekMealIndex,
+                    mealTimeIndex
+                  )
+                }"
+                class="accordion-collapse transition-max-height duration-500 ease-in-out overflow-hidden"
               >
-                <div class="accordion-body">
-                  <table
-                    class="table table-info table-striped-columns table-hover"
-                  >
+                <div>
+                  <table class="min-w-full bg-white rounded-lg shadow-md">
                     <thead>
-                      <tr class="table-info">
-                        <th>#</th>
-                        <th>Name</th>
-                        <th>Amount</th>
+                      <tr class="bg-gray-600 text-white">
+                        <th class="py-2 px-4">#</th>
+                        <th class="py-2 px-4">Name</th>
+                        <th class="py-2 px-4">Amount</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -75,18 +64,24 @@
                           let eachDetail of mealTimeDetail.value;
                           let ind = index
                         "
+                        class="hover:bg-gray-100"
                       >
-                        <th scope="row">{{ ind + 1 }}</th>
-                        <td>{{ eachDetail.mealsConsumedUser }}</td>
-                        <td>{{ eachDetail.amountPerMeal }}</td>
+                        <td class="py-2 px-4">{{ ind + 1 }}</td>
+                        <td class="py-2 px-4">
+                          {{ eachDetail.mealsConsumedUser }}
+                        </td>
+                        <td class="py-2 px-4">
+                          {{ eachDetail.amountPerMeal }}
+                        </td>
                       </tr>
                       <tr>
-                        <td colspan="3">
-                          <Button
-                            class="btn btn-danger"
+                        <td colspan="3" class="py-2 px-4">
+                          <button
+                            class="bg-red-500 text-white py-2 px-4 rounded"
                             (click)="deleteRecord(mealTimeDetail.value.at(0)!)"
-                            >Delete {{ mealTimeDetail.key }} Records</Button
                           >
+                            Delete {{ mealTimeDetail.key }} Records
+                          </button>
                         </td>
                       </tr>
                     </tbody>
@@ -100,7 +95,6 @@
     </div>
   </div>
 </div>
-
 <ng-template #pageLoading>
   <mat-spinner class="spinner"></mat-spinner>
 </ng-template>
