port updated and defer view added

--- a/signalWithApi/src/app/app.component.css
+++ b/signalWithApi/src/app/app.component.css
@@ -1,5 +1,8 @@
-form {
+form,
+p {
   display: flex;
-  justify-content: center;
-  margin-top: 100%;
+  justify-content: space-between;
+  padding-top: 10%;
+  padding-left: 10%;
+  width: 600px;
 }
