--- a/src/app/meal-form/meal-form.component.html
+++ b/src/app/meal-form/meal-form.component.html
@@ -3,6 +3,7 @@
   *ngIf="!pageLoading"
   [formGroup]="mealForm"
   class="bg-gray-800 flex items-center justify-center"
+  (ngSubmit)="submitTheForm()"
 >
   <div class="container mx-auto">
     <div class="flex flex-wrap justify-center gap-4">
@@ -106,6 +107,14 @@
           </button>
         </div>
       </div>
+    </div>
+    <div class="flex flex-wrap justify-center">
+      <button
+        type="submit"
+        class="text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+      >
+        Submit
+      </button>
     </div>
   </div>
 </form>
