label changes and removed the css file

--- a/angular18/src/app/zoneless/zoneless.component.html
+++ b/angular18/src/app/zoneless/zoneless.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="card-footer text-body-secondary">
           <button (click)="incrementPlainCounter()" class="btn btn-primary">
-            Increment
+            Increment Plain Counter
           </button>
         </div>
       </div>
@@ -36,8 +36,8 @@
           }
         </div>
         <div class="card-footer text-body-secondary">
-          <button (click)="incrementSignalCounter()" class="btn btn-primary">
-            Increment
+          <button (click)="incrementSignalCounter()" class="btn btn-success">
+            Increment Signal Counter
           </button>
         </div>
       </div>
@@ -58,8 +58,8 @@
           }
         </div>
         <div class="card-footer text-body-secondary">
-          <button (click)="incrementCounter()" class="btn btn-primary">
-            Increment
+          <button (click)="incrementCounter()" class="btn btn-secondary">
+            Increment Observable Counter
           </button>
         </div>
       </div>
@@ -68,5 +68,5 @@
 </div>
 
 <ng-template #initialValue>
-  <p class="fs-5 text-muted">Please Start Counting</p>
+  <p class="fs-5 text-muted">Counting yet to begin</p>
 </ng-template>
