--- a/angular18/src/app/invoice/invoice.component.html
+++ b/angular18/src/app/invoice/invoice.component.html
@@ -40,6 +40,7 @@
               formControlName="quantity"
               placeholder="Quantity"
               [min]="1"
+              (change)="updateRowTotal(indexValue)"
             />
           </mat-form-field>
         </td>
