--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,3 @@
-@let isCollapsed = true;
 <nav class="bg-white py-2 md:py-4">
   <div class="container px-4 mx-auto md:flex md:items-center">
     <div class="flex justify-between items-center">
@@ -7,7 +6,7 @@
       >
       <button
         type="button"
-        (click)="isCollapsed = !isCollapsed"
+        (click)="toggleNavbar()"
         class="border border-solid border-gray-600 px-3 py-1 rounded text-gray-600 opacity-50 hover:opacity-75 md:hidden"
         id="navbar-toggle"
       >
@@ -30,7 +29,7 @@
 
     <div
       class="hidden md:flex flex-col md:flex-row md:ml-auto mt-3 md:mt-0"
-      [ngClass]="{ hidden: isCollapsed, flex: !isCollapsed }"
+      [ngClass]="{ hidden: isCollapsed(), flex: !isCollapsed() }"
       id="navbar-collapse"
     >
       <a
