--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -57,16 +57,13 @@
         class="p-2 lg:px-4 md:mx-2 text-gray-600 rounded hover:bg-gray-200 hover:text-gray-700 transition-colors duration-300"
         >Contact</a
       >
-      <a
-        href="#"
-        class="p-2 lg:px-4 md:mx-2 text-black hover:text-gray-600 text-center border border-transparent rounded hover:bg-black hover:text-gray-100 hover:text-black hover:text-gray-700 transition-colors duration-300"
-        >Login</a
-      >
-      <a
-        href="#"
+
+      <button
+        (click)="logout()"
         class="p-2 lg:px-4 md:mx-2 text-black hover:text-gray-600 text-center border border-solid border-black hover:text-gray-600 rounded hover:bg-black hover:text-gray-600 hover:text-white transition-colors duration-300 mt-1 md:mt-0 md:ml-1"
-        >Signup</a
       >
+        Signup
+      </button>
     </div>
   </div>
 </nav>
