--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -26,24 +26,38 @@
           Add a new product to the store
         </p>
 
-        <form class="mt-8 grid grid-cols-6 gap-6">
+        <form
+          [formGroup]="productForm"
+          (ngSubmit)="onSubmit()"
+          class="mt-8 grid grid-cols-6 gap-6"
+        >
           <div class="col-span-6 sm:col-span-3">
             <mat-form-field class="example-full-width">
               <mat-label>Product Name</mat-label>
-              <input type="text" matInput placeholder="Tomato" />
+              <input
+                type="text"
+                formControlName="productName"
+                matInput
+                placeholder="Tomato"
+              />
             </mat-form-field>
           </div>
           <div class="col-span-6 sm:col-span-3">
             <mat-form-field class="example-full-width">
               <mat-label>Product Amount</mat-label>
-              <input type="number" matInput placeholder="10" />
+              <input
+                type="number"
+                formControlName="productPrice"
+                matInput
+                placeholder="10"
+              />
             </mat-form-field>
           </div>
           <div class="col-span-6">
             <mat-form-field>
-              <mat-label>Favorite food</mat-label>
-              <mat-select>
-                @for (food of productTypes; track food) {
+              <mat-label>Product Type</mat-label>
+              <mat-select formControlName="productType">
+                @for (food of productTypes(); track food) {
                 <mat-option [value]="food">{{ food }}</mat-option>
                 }
               </mat-select>
@@ -53,7 +67,8 @@
           <div class="col-span-6 sm:col-span-3">
             <button
               type="submit"
-              class="inline-block rounded border border-indigo-600 px-12 py-3 text-sm font-medium text-indigo-600 hover:bg-indigo-600 hover:text-white focus:outline-none focus:ring active:bg-indigo-500"
+              [disabled]="productForm.invalid"
+              class="inline-block rounded border border-gray-600 px-12 py-3 text-sm font-medium text-gray-600 hover:bg-gray-600 hover:text-white focus:outline-none focus:ring active:bg-gray-500"
             >
               Add Product
             </button>
