--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -44,9 +44,9 @@
         >Add Product</a
       >
       <a
-        href="#"
+        [routerLink]="['/products/cart']"
         class="p-2 lg:px-4 md:mx-2 text-gray-600 rounded hover:bg-gray-200 hover:text-gray-700 transition-colors duration-300"
-        >Features</a
+        >Cart</a
       >
       <a
         href="#"
